# flowyml-notebook

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FlowyML E2E Demo.py  FlowyML E2E Demo_report.html  Makefile  README.md  SECURITY.md  TODO.md  mkdocs.yml  pyproject.toml  release.config.js  tuto.md  versions.json
.github/workflows/: MANUAL_DOCS_PUBLISH.yml  MANUAL_PYPI_PUBLISH.yml  PRECOMMITS.yml  PR_PREVIEW.yml  RELEASE.yml  UTESTS.yml  release.yml  tests.yml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/: index.html
0.2.0/architecture/: index.html
0.2.0/collaboration/: index.html
0.2.0/exploration/: index.html
0.2.0/features/: index.html
0.2.0/getting-started/: index.html
0.2.0/integration/: index.html
0.2.0/recipes/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/api/: index.html
1.0.0/architecture/: index.html
1.0.0/collaboration/: index.html
1.0.0/exploration/: index.html
1.0.0/features/: index.html
1.0.0/getting-started/: index.html
1.0.0/integration/: index.html
1.0.0/recipes/: index.html
1.0.0/stylesheets/: extra.css
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/api/: index.html
1.1.0/architecture/: index.html
1.1.0/collaboration/: index.html
1.1.0/exploration/: index.html
1.1.0/features/: index.html
1.1.0/getting-started/: index.html
1.1.0/integration/: index.html
1.1.0/recipes/: index.html
1.1.0/search/: search_index.json
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/api/: index.html
1.2.0/architecture/: index.html
1.2.0/collaboration/: index.html
1.2.0/exploration/: index.html
1.2.0/features/: index.html
1.2.0/getting-started/: index.html
1.2.0/integration/: index.html
1.2.0/recipes/: index.html
1.2.0/search/: search_index.json
1.3.1/: 404.html  index.html  sitemap.xml
1.3.1/api/: index.html
1.3.1/architecture/: index.html
1.3.1/collaboration/: index.html
1.3.1/ecosystem/: index.html
1.3.1/exploration/: index.html
1.3.1/features/: index.html
1.3.1/getting-started/: index.html
1.3.1/integration/: index.html
1.3.1/recipes/: index.html
1.3.2/: 404.html  index.html  sitemap.xml
1.3.2/api/: index.html
1.3.2/architecture/: index.html
1.3.2/collaboration/: index.html
1.3.2/ecosystem/: index.html
1.3.2/exploration/: index.html
1.3.2/features/: index.html
1.3.2/getting-started/: index.html
1.3.2/integration/: index.html
1.3.2/recipes/: index.html
1.4.0/: 404.html  index.html  sitemap.xml
1.4.0/api/: index.html
1.4.0/architecture/: index.html
1.4.0/collaboration/: index.html
1.4.0/ecosystem/: index.html
1.4.0/exploration/: index.html
1.4.0/features/: index.html
1.4.0/getting-started/: index.html
1.4.0/integration/: index.html
1.4.0/recipes/: index.html
1.4.0/search/: search_index.json
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/api/: index.html
2.0.0/architecture/: index.html
2.0.0/collaboration/: index.html
2.0.0/ecosystem/: index.html
2.0.0/exploration/: index.html
2.0.0/features/: index.html
2.0.0/getting-started/: index.html
2.0.0/integration/: index.html
2.0.0/killer-features/: index.html
2.0.0/recipes/: index.html
2.0.0/search/: search_index.json
2.0.1/: 404.html  index.html  sitemap.xml
2.0.1/api/: index.html
2.0.1/architecture/: index.html
2.0.1/collaboration/: index.html
2.0.1/ecosystem/: index.html
2.0.1/exploration/: index.html
2.0.1/features/: index.html
2.0.1/getting-started/: index.html
2.0.1/integration/: index.html
2.0.1/killer-features/: index.html
2.0.1/recipes/: index.html
2.0.2/: 404.html  index.html  sitemap.xml
2.0.2/api/: index.html
2.0.2/architecture/: index.html
2.0.2/collaboration/: index.html
2.0.2/ecosystem/: index.html
2.0.2/exploration/: index.html
2.0.2/features/: index.html
2.0.2/getting-started/: index.html
2.0.2/integration/: index.html
2.0.2/killer-features/: index.html
2.0.2/recipes/: index.html
2.0.3/: 404.html  index.html  sitemap.xml
2.0.3/api/: index.html
2.0.3/architecture/: index.html
2.0.3/collaboration/: index.html
2.0.3/ecosystem/: index.html
2.0.3/exploration/: index.html
2.0.3/features/: index.html
2.0.3/getting-started/: index.html
2.0.3/integration/: index.html
2.0.3/killer-features/: index.html
2.0.3/recipes/: index.html
2.0.4/: 404.html  index.html  sitemap.xml
2.0.4/api/: index.html
2.0.4/architecture/: index.html
2.0.4/collaboration/: index.html
2.0.4/ecosystem/: index.html
2.0.4/exploration/: index.html
2.0.4/features/: index.html
2.0.4/getting-started/: index.html
2.0.4/integration/: index.html
2.0.4/killer-features/: index.html
2.0.4/recipes/: index.html
2.0.4/search/: search_index.json
2.0.5/: 404.html  index.html  objects.inv  sitemap.xml
2.0.6/: 404.html  index.html  macros.py  sitemap.xml
2.0.7/: 404.html  index.html  sitemap.xml
assets/: linkedin_post.md
docs/: api.md  architecture.md  collaboration.md  ecosystem.md  exploration.md  features.md  getting-started.md  index.md  integration.md  killer-features.md  recipes.md
flowyml_notebook/: __init__.py  benchmark.py  cell_deps.py  cells.py  cli.py  code_analyzer.py  config.py  connection.py  core.py  data_validator.py  deployer.py  dev_server.py  diff.py  environment.py  execution_history.py  github_sync.py  ipynb_converter.py  kernel.py  lineage.py  magics.py  notebook_manager.py  package_installer.py  profiler.py  reactive.py  recipes_store.py  reporting.py  scheduler_bridge.py  search.py  server.py  snippets.py
fmln/: __init__.py
tests/: run_tests.py  test_cells.py  test_core.py  test_github_sync.py  test_integrations.py  test_ipynb_converter.py  test_killer_features.py  test_new_killer_features.py  test_reactive.py  test_reactive_edge_cases.py  test_server_features.py
(+83 files in other folders)
